tests/negative/test_decl_not_type_id.orb
fnc foo() () {};

fnc main() () {
    let (x:foo 0);
};